--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "private": true,
   "devDependencies": {
     "cypress": "^13.9.0",
+    "dotenv": "^17.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.0.0",
+    "nodemon": "^3.1.10",
     "serve": "^14.2.3"
   },
   "dependencies": {
-    "mongoose": "^8.17.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.2"
+  },
+  "scripts": {
+    "devStart": "nodemon api\\app.js"
   }
 }
