--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "mongoose": "^8.17.2"
   },
   "scripts": {
-    "devStart": "nodemon api\\app.js"
+    "devStart": "nodemon api/app.js"
   }
 }
