--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "mongoose": "^8.17.2"
   },
   "scripts": {
-    "devStart": "nodemon api/app.js"
+    "devStart": "nodemon api/app.js",
+    "dev:frontend": "npm run dev --prefix frontend",
+    "postinstall": "npm install --prefix frontend",
+    "dev": "npm run devStart & npm run dev:frontend"
   }
 }
