fixing authentication, adding swagger documentation

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "serve": "^14.2.3"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.2"
+    "mongoose": "^8.17.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
     "dev:api": "nodemon api/app.js",
