--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "dev:frontend": "npm run dev --prefix frontend",
     "postinstall": "npm install --prefix frontend",
     "dev": "npm run dev:api & npm run dev:frontend"
-  }
+  },
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jifa-team/ep2-pi4.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jifa-team/ep2-pi4/issues"
+  },
+  "homepage": "https://github.com/jifa-team/ep2-pi4#readme"
 }
