--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Ferramentas de teste e lint para o site estático.",
   "private": true,
   "devDependencies": {
-    "cypress": "^13.9.0",
+    "@badeball/cypress-cucumber-preprocessor": "^23.1.0",
+    "@cypress/browserify-preprocessor": "^3.0.2",
+    "cypress": "^13.17.0",
     "dotenv": "^17.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.0.0",
